--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,10 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
@@ -34,6 +37,4 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# genkit
-.genkit/
-.genkit-cache/
+.env.production
