--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,11 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
+
+# Keep .env.production for deployment but add to repo for Firebase
+# Note: You should set actual secrets via Firebase App Hosting environment variables
+# .env.production
 
 # vercel
 .vercel
@@ -37,4 +42,7 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-.env.production
+# Firebase
+.firebase/
+firebase-debug.log
+.runtimeconfig.json
