--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -5,3 +5,20 @@ runConfig:
   # Increase this value if you'd like to automatically spin up
   # more instances in response to increased traffic.
   maxInstances: 1
+  
+  # Environment variables for production
+  env:
+    NODE_ENV: production
+    
+  # CPU and memory configuration
+  cpu: 1
+  memoryMiB: 512
+
+# Build configuration
+buildConfig:
+  # Commands to run during the build
+  buildCommand: "npm run build"
+  
+  # Environment variables available during build
+  env:
+    NODE_ENV: production
