--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "NODE_ENV=production next build",
+    "build:production": "NODE_ENV=production next build",
+    "build:development": "NODE_ENV=development next build",
     "start": "next start",
+    "start:production": "NODE_ENV=production next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "preview": "npm run build:production && npm run start:production"
   },
   "dependencies": {
     "@genkit-ai/google-genai": "^1.20.0",
