fiix: app hosting

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -5,11 +5,23 @@ runConfig:
   # Increase this value if you'd like to automatically spin up
   # more instances in response to increased traffic.
   maxInstances: 1
-  
+
   # Environment variables for production
+  # Note: Sensitive values are configured as secrets via Firebase CLI
   env:
-    NODE_ENV: production
-    
+    - variable: NODE_ENV
+      value: production
+    - variable: GOOGLE_CLIENT_SECRET
+      secret: GOOGLE_CLIENT_SECRET
+    - variable: GOOGLE_CLIENT_ID
+      secret: GOOGLE_CLIENT_ID
+    - variable: ADMIN_EMAIL
+      secret: ADMIN_EMAIL
+    - variable: NEXTAUTH_URL
+      secret: NEXTAUTH_URL
+    - variable: NEXTAUTH_SECRET
+      secret: NEXTAUTH_SECRET
+
   # CPU and memory configuration
   cpu: 1
   memoryMiB: 512
@@ -18,7 +30,17 @@ runConfig:
 buildConfig:
   # Commands to run during the build
   buildCommand: "npm run build"
-  
+
   # Environment variables available during build
+  # Only public variables (NEXT_PUBLIC_*) can be safely defined here
   env:
     NODE_ENV: production
+    NEXT_PUBLIC_APP_URL: "https://kedein.com"
+    NEXT_PUBLIC_FIREBASE_API_KEY: "AIzaSyAEQzWzdfe1qYrj8o8N0-Nm-8cOhgEb9mI"
+    NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN: "portfolio-9f6d9.firebaseapp.com"
+    NEXT_PUBLIC_FIREBASE_PROJECT_ID: "portfolio-9f6d9"
+    NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET: "portfolio-9f6d9.firebasestorage.app"
+    NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID: "663643082033"
+    NEXT_PUBLIC_FIREBASE_APP_ID: "1:663643082033:web:75319c1227614e3cc6f410"
+    NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID: "G-C6VHHEWF46"
+    NEXT_PUBLIC_GOOGLE_ANALYTICS_ID: "G-C6VHHEWF46"
