--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,13 +1,7 @@
-# Settings to manage and configure a Firebase App Hosting backend.
-# https://firebase.google.com/docs/app-hosting/configure
-
 runConfig:
-  # Increase this value if you'd like to automatically spin up
-  # more instances in response to increased traffic.
   maxInstances: 1
-
-  # Environment variables for production
-  # Note: Sensitive values are configured as secrets via Firebase CLI
+  cpu: 1
+  memoryMiB: 512
   env:
     - variable: NODE_ENV
       value: production
@@ -22,25 +16,16 @@ runConfig:
     - variable: NEXTAUTH_SECRET
       secret: NEXTAUTH_SECRET
 
-  # CPU and memory configuration
-  cpu: 1
-  memoryMiB: 512
-
-# Build configuration
 buildConfig:
-  # Commands to run during the build
-  buildCommand: "npm run build"
-
-  # Environment variables available during build
-  # Only public variables (NEXT_PUBLIC_*) can be safely defined here
+  buildCommand: npm run build
   env:
     NODE_ENV: production
-    NEXT_PUBLIC_APP_URL: "https://kedein.com"
-    NEXT_PUBLIC_FIREBASE_API_KEY: "AIzaSyAEQzWzdfe1qYrj8o8N0-Nm-8cOhgEb9mI"
-    NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN: "portfolio-9f6d9.firebaseapp.com"
-    NEXT_PUBLIC_FIREBASE_PROJECT_ID: "portfolio-9f6d9"
-    NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET: "portfolio-9f6d9.firebasestorage.app"
+    NEXT_PUBLIC_APP_URL: https://kedein.com
+    NEXT_PUBLIC_FIREBASE_API_KEY: AIzaSyAEQzWzdfe1qYrj8o8N0-Nm-8cOhgEb9mI
+    NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN: portfolio-9f6d9.firebaseapp.com
+    NEXT_PUBLIC_FIREBASE_PROJECT_ID: portfolio-9f6d9
+    NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET: portfolio-9f6d9.firebasestorage.app
     NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID: "663643082033"
-    NEXT_PUBLIC_FIREBASE_APP_ID: "1:663643082033:web:75319c1227614e3cc6f410"
-    NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID: "G-C6VHHEWF46"
-    NEXT_PUBLIC_GOOGLE_ANALYTICS_ID: "G-C6VHHEWF46"
+    NEXT_PUBLIC_FIREBASE_APP_ID: 1:663643082033:web:75319c1227614e3cc6f410
+    NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID: G-C6VHHEWF46
+    NEXT_PUBLIC_GOOGLE_ANALYTICS_ID: G-C6VHHEWF46
